# app-next-record-screen

./: .env  .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  wrangler.jsonc
.windsurf/plans/: source-separation-mdxnet-7fe8cb.md
.windsurf/rules/: README.md  animation-interactions.md  audio-visualization.md  build-optimization.md  code-organization.md  component-patterns.md  design-system.md  react-audio-hooks.md  rust-performance.md  security-permissions.md  tauri-integration.md  testing-quality.md  ui-ux-patterns.md
cloudflare-workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare-workers/migrations/: 0001_initial.sql
cloudflare-workers/src/: index.ts
cloudflare-workers/src/handlers/: health.ts  storage.ts  transcription.ts
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  commands.rs  error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/audio/: capture.rs  enhance.rs  mod.rs  wasapi.rs  wav.rs
src-tauri/src/transcription/: engine.rs  mod.rs  model_manager.rs
src-workers/whisper-transcription/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
src-workers/whisper-transcription/src/: index.ts
src/features/audio-recorder/: index.ts
src/features/selection/: index.ts
src/shared/: index.ts
src/shared/services/: cloudStorage.ts  createServices.ts  environment.ts  fileStorage.tauri.ts  fileStorage.web.ts  (+4 more)
(+84 files in other folders)
