[package]
name = "recognimg"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "recogni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
nnnoiseless = "0.5"
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic", "ndarray"] }
zip = "2"
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "onig"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

# ── Release optimizations ────────────────────────────────────────────
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "s"
panic = "abort"

[profile.dev]
opt-level = 0
incremental = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
redundant_clone = "warn"
needless_collect = "warn"
large_enum_variant = "warn"
manual_let_else = "warn"
